--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Migrador
 endorsed.classpath=
 excludes=
-file.reference.mssql-jdbc-9.4.0.jre8.jar=src/lib/mssql-jdbc-9.4.0.jre8.jar
+file.reference.mssql-jdbc-9.4.0.jre8.jar=src\\lib\\mssql-jdbc-9.4.0.jre8.jar
 file.reference.mysql-connector-java-5.1.48.jar=src\\lib\\mysql-connector-java-5.1.48.jar
 file.reference.ojdbc8.jar=src\\lib\\ojdbc8.jar
 file.reference.postgresql-42.2.8.jar=src\\lib\\postgresql-42.2.8.jar
@@ -81,7 +81,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Migrador
-main.class=tcc.Main
+main.class=Migrador.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -102,4 +102,5 @@ run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
+src.nbproject.dir=nbproject
 test.src.dir=test
