Ajuste de gitignore

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,7 +40,7 @@ file.reference.mysql-connector-java-5.1.48.jar=src\\lib\\mysql-connector-java-5.
 file.reference.ojdbc8.jar=src\\lib\\ojdbc8.jar
 file.reference.postgresql-42.2.8.jar=src\\lib\\postgresql-42.2.8.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.48.jar}:\
     ${file.reference.ojdbc8.jar}:\
@@ -85,6 +85,7 @@ main.class=Migrador.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
+no.dependencies=true
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
@@ -102,5 +103,4 @@ run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
-src.nbproject.dir=nbproject
 test.src.dir=test
