--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,17 +35,17 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Migrador
 endorsed.classpath=
 excludes=
-file.reference.mssql-jdbc-9.4.0.jre8.jar=src\\lib\\mssql-jdbc-9.4.0.jre8.jar
-file.reference.mysql-connector-java-5.1.48.jar=src\\lib\\mysql-connector-java-5.1.48.jar
-file.reference.ojdbc8.jar=src\\lib\\ojdbc8.jar
-file.reference.postgresql-42.2.8.jar=src\\lib\\postgresql-42.2.8.jar
+file.reference.mssql-jdbc-9.4.0.jre8.jar=src/lib/mssql-jdbc-9.4.0.jre8.jar
+file.reference.mysql-connector-java-5.1.48.jar=src/lib/mysql-connector-java-5.1.48.jar
+file.reference.ojdbc8.jar=src/lib/ojdbc8.jar
+file.reference.postgresql-42.2.8.jar=src/lib/postgresql-42.2.8.jar
 includes=**
-jar.compress=true
+jar.compress=false
 javac.classpath=\
+    ${file.reference.mssql-jdbc-9.4.0.jre8.jar}:\
     ${file.reference.mysql-connector-java-5.1.48.jar}:\
     ${file.reference.ojdbc8.jar}:\
-    ${file.reference.postgresql-42.2.8.jar}:\
-    ${file.reference.mssql-jdbc-9.4.0.jre8.jar}
+    ${file.reference.postgresql-42.2.8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -85,7 +85,6 @@ main.class=Migrador.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-no.dependencies=true
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
