--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 #Configurações do Migrador de Banco de Dados
-#Mon Mar 11 19:43:29 BRT 2024
+#Mon Mar 11 23:28:36 BRT 2024
 driver=jdbc\:postgresql\:
-pass=db97!#!!
+pass=db97\!\#\!\!
 bancoDados=//localhost\:5432/BancoMIGRADOR
 user=root
